add external links an internal connections

--- a/about.html
+++ b/about.html
@@ -47,23 +47,44 @@
             <img class="logo__img" src="assets/logo_mrcoffee.png">
         </h1>
 
-        <article class="contact">
-            <h2 class="contact__header">On vous attend&nbsp;!</h2>
-
-        <adress class="contact__details">
-            <h3 class="contact__cafeName">Mr.Coffee</h3>
-            <div class="contact__address">
-                15 place Jules Guesde<br>
-                75006 Paris
+        <article class="about">
+            <div class="about__description">
+                <h2 class="about__header">
+                    Chez Mr.Coffee, notre engagement commence dans le café.</h2>
+                <p class="about__paragraph">
+                    On ne pouvait pas offrir un espace de liberté d’expression
+                    et de partage sans penser à ce que l’on sert dans nos
+                    tasses..
+                    Tout nos cafés viennent d’exploitations équitables&nbsp;: les
+                    agriculteurs bénéficient d’une rémunération juste pour leur
+                    labeur, les conditions de travail respectent les droits de
+                    l’Homme.
+                    C’est ce qui rend nos cafés si bons&nbsp;: ils poussent, sont
+                    cultivés, cueillis, et séchés dans le respect et l’amour.
+                </p>
             </div>
-            <div class="contact__mediated">
-                Tel&nbsp;: <a href="tel:+33946257845">+33 9 46 25 78 45</a><br>
-                Mail&nbsp;: <a href="mailto:contact@mr-coffee.com">contact@mr-coffee.com</a>
+            <div class="about__description">
+                <img class="about__img" src="assets/trois_cafés.jpg" alt="">
             </div>
-        </adress>
-
-        <iframe class="contact__map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d552.0729776163778!2d2.3202916051659916!3d48.83691739328176!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e671b5590a00b1%3A0x2711ee015c1c2b2e!2s15%20Rue%20Jules%20Guesde%2C%2075014%20Paris%2C%20Francja!5e0!3m2!1spl!2spl!4v1641408092268!5m2!1spl!2spl">
-        </iframe>
+            <div class="about__description">
+                <img class="about__img" src="assets/mrcoffee_salle2.jpg" alt="">
+            </div>
+            <div class="about__description">
+                <h2 class="about__header">
+                    Mr.Coffee, un café (presque) comme les autres.</h2>
+                <p class="about__paragraph">
+                    Ici, on vient pour retrouver quelqu’un, ou se retrouver avec
+                    soi, pour travailler sur son ordinateur ou se détendre, pour
+                    lire parmis les ouvrages de notre bibliothèque ou
+                    simplement apprécier un bon café.
+                    Tout ce monde si différent qui se croise sans se voir, ça nous
+                    a donné envie de faire quelque chose en plus.
+                    C’est comme cela que Mr.Coffee, le philosophe, est né.
+                    Notre ambition&nbsp;: réunir des gens de tous les horizons
+                    autour de sujets de société, de débats philosophiques, de
+                    leur passion commune pour l’écriture et les lettres.
+                </p>
+            </div>
         </article>
         
     </main>
