--- a/index.html
+++ b/index.html
@@ -15,24 +15,24 @@
     <header class="header">        
         <div class="header__inner">
             <div class="header__logo">
-                <a href="#" class="header__link">
+                <a href="index.html" class="header__link">
                     <img class="header__img" src="assets/full_logo_white.png">
                 </a>
             </div>
             <nav class="header__nav">
                 <ul class="header__navList">
                     <li class="header__navListItem">
-                        <a href="#" class="link">
+                        <a href="index.html" class="link">
                             Accueil
                         </a>
                     </li>            
                     <li class="header__navListItem">
-                        <a href="#" class="link">
+                        <a href="about.html" class="link">
                             Qui sommes-nous?
                         </a>
                     </li>            
                     <li class="header__navListItem">
-                        <a href="#" class="link">
+                        <a href="contact.html" class="link">
                             Nous contacter
                         </a>
                     </li>
@@ -72,7 +72,7 @@
                         <p class="presentation__paragraph">Chez Mr.Coffee, que vous soyez poête, fantasque ou philosophe, nous vous offrons un lieu pour parler de vos histoires, ou pour les écrire.</p>
                     </li>
                 </ul>
-                <button class="presentation__moreButton"><a href="#" class="link">En savoir plus</a></button>
+                <button class="presentation__moreButton"><a href="about.html" class="link">En savoir plus</a></button>
             </div>
             
             <h2 class="events__header">Découvrez notre progamme</h2>
@@ -100,7 +100,7 @@
                 <p class="events__additional">
                     Sans oublier nos ateliers d’écritures et évènements excéptionnels&nbsp;!                
                 </p>
-                <p class="events__callToContact">Rendez-vous sur notre page <a href="#" class="link link--onLightBackground">Contact</a> pour retrouver
+                <p class="events__callToContact">Rendez-vous sur notre page <a href="contact.html" class="link link--onLightBackground">Contact</a> pour retrouver
                         toutes les infos pratiques</p>
                 </div>
 
@@ -111,7 +111,7 @@
     <footer class="footer">
         <div class="footer__inner">
             <div class="footer__logo">
-                <a>
+                <a href="index.html" class="footer__link">
                     <img class="footer__logo--img" src="assets/logo_blanc.png">
                 </a>
             </div>
@@ -121,17 +121,17 @@
                 </p>
                 <ul class="footer__socialMediaList">
                     <li class="footer__socialMediaList--item">
-                        <a href="#" class="link">
+                        <a href="https://www.linkedin.com/" class="link">
                             <img class="footer__socialMedia--img" src="assets/logo_linkedin.png">
                         </a>
                     </li>
                     <li class="footer__socialMediaList--item">
-                        <a href="#" class="link">
+                        <a href="https://twitter.com/" class="link">
                             <img class="footer__socialMedia--img" src="assets/logo_twitter.png">
                         </a>
                     </li>
                     <li class="footer__socialMediaList--item">
-                        <a href="#" class="link">
+                        <a href="https://www.facebook.com/" class="link">
                             <img class="footer__socialMedia--img" src="assets/logo_facebook.png">
                         </a>
                     </li>
