add alt atribute to all imgs

--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
         <div class="header__inner">
             <div class="header__logo">
                 <a href="index.html" class="header__link">
-                    <img class="header__img" src="assets/full_logo_white.png">
+                    <img class="header__img" src="assets/full_logo_white.png" alt="cafe's logo">
                 </a>
             </div>
             <nav class="header__nav">
@@ -44,7 +44,7 @@
     <main class="main">
 
         <h1 class="logo">
-            <img class="logo__img" src="assets/logo_mrcoffee.png">
+            <img class="logo__img" src="assets/logo_mrcoffee.png" alt="big cafe's logo">
         </h1>
 
         <article class="about">
@@ -61,15 +61,11 @@
                     l’Homme.
                     C’est ce qui rend nos cafés si bons&nbsp;: ils poussent, sont
                     cultivés, cueillis, et séchés dans le respect et l’amour.
-                </p>
+                </p>            
+                <img class="about__img about__img--right" src="assets/trois_cafés.jpg" alt="coffee in three forms: brewed with foam, ground and beans">
             </div>
             <div class="about__description">
-                <img class="about__img" src="assets/trois_cafés.jpg" alt="">
-            </div>
-            <div class="about__description">
-                <img class="about__img" src="assets/mrcoffee_salle2.jpg" alt="">
-            </div>
-            <div class="about__description">
+                <img class="about__img" src="assets/mrcoffee_salle2.jpg" alt="view of the bar in the cafe room">            
                 <h2 class="about__header">
                     Mr.Coffee, un café (presque) comme les autres.</h2>
                 <p class="about__paragraph">
@@ -93,7 +89,7 @@
         <div class="footer__inner">
             <div class="footer__logo">
                 <a href="index.html" class="footer__link">
-                    <img class="footer__logo--img" src="assets/logo_blanc.png">
+                    <img class="footer__logo--img" src="assets/logo_blanc.png" alt="cafe's logo">
                 </a>
             </div>
             <div class="footer__socialMedia">
@@ -103,17 +99,17 @@
                 <ul class="footer__socialMediaList">
                     <li class="footer__socialMediaList--item">
                         <a href="https://www.linkedin.com/" class="link">
-                            <img class="footer__socialMedia--img" src="assets/logo_linkedin.png">
+                            <img class="footer__socialMedia--img" src="assets/logo_linkedin.png" alt="">
                         </a>
                     </li>
                     <li class="footer__socialMediaList--item">
                         <a href="https://twitter.com/" class="link">
-                            <img class="footer__socialMedia--img" src="assets/logo_twitter.png">
+                            <img class="footer__socialMedia--img" src="assets/logo_twitter.png" alt="">
                         </a>
                     </li>
                     <li class="footer__socialMediaList--item">
                         <a href="https://www.facebook.com/" class="link">
-                            <img class="footer__socialMedia--img" src="assets/logo_facebook.png">
+                            <img class="footer__socialMedia--img" src="assets/logo_facebook.png" alt="">
                         </a>
                     </li>
                 </ul>
