--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
         <div class="header__inner">
             <div class="header__logo">
                 <a href="index.html" class="header__link">
-                    <img class="header__img" src="assets/full_logo_white.png">
+                    <img class="header__img" src="assets/full_logo_white.png" alt="cafe's logo">
                 </a>
             </div>
             <nav class="header__nav">
@@ -44,21 +44,21 @@
     <main class="main">
 
         <h1 class="logo">
-            <img class="logo__img" src="assets/logo_mrcoffee.png">
+            <img class="logo__img" src="assets/logo_mrcoffee.png" alt="big cafe's logo">
         </h1>
 
         <article class="contact">
             <h2 class="contact__header">On vous attend&nbsp;!</h2>
-
-        <adress class="contact__details">
             <h3 class="contact__cafeName">Mr.Coffee</h3>
+
+        <adress class="contact__details">            
             <div class="contact__address">
                 15 place Jules Guesde<br>
                 75006 Paris
             </div>
             <div class="contact__mediated">
-                Tel&nbsp;: <a href="tel:+33946257845">+33 9 46 25 78 45</a><br>
-                Mail&nbsp;: <a href="mailto:contact@mr-coffee.com">contact@mr-coffee.com</a>
+                Tel&nbsp;: <a class="link link--onLightBackground" href="tel:+33946257845">+33 9 46 25 78 45</a><br>
+                Mail&nbsp;: <a class="link link--onLightBackground" href="mailto:contact@mr-coffee.com">contact@mr-coffee.com</a>
             </div>
         </adress>
 
@@ -72,7 +72,7 @@
         <div class="footer__inner">
             <div class="footer__logo">
                 <a href="index.html" class="footer__link">
-                    <img class="footer__logo--img" src="assets/logo_blanc.png">
+                    <img class="footer__logo--img" src="assets/logo_blanc.png" alt="cafe's logo">
                 </a>
             </div>
             <div class="footer__socialMedia">
@@ -82,17 +82,17 @@
                 <ul class="footer__socialMediaList">
                     <li class="footer__socialMediaList--item">
                         <a href="https://www.linkedin.com/" class="link">
-                            <img class="footer__socialMedia--img" src="assets/logo_linkedin.png">
+                            <img class="footer__socialMedia--img" src="assets/logo_linkedin.png" alt="">
                         </a>
                     </li>
                     <li class="footer__socialMediaList--item">
                         <a href="https://twitter.com/" class="link">
-                            <img class="footer__socialMedia--img" src="assets/logo_twitter.png">
+                            <img class="footer__socialMedia--img" src="assets/logo_twitter.png" alt="">
                         </a>
                     </li>
                     <li class="footer__socialMediaList--item">
                         <a href="https://www.facebook.com/" class="link">
-                            <img class="footer__socialMedia--img" src="assets/logo_facebook.png">
+                            <img class="footer__socialMedia--img" src="assets/logo_facebook.png" alt="">
                         </a>
                     </li>
                 </ul>
