--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="header__inner">
             <div class="header__logo">
                 <a href="index.html" class="header__link">
-                    <img class="header__img" src="assets/full_logo_white.png">
+                    <img class="header__img" src="assets/full_logo_white.png" alt="cafe's logo">
                 </a>
             </div>
             <nav class="header__nav">
@@ -44,41 +44,41 @@
     <main class="main">
 
         <h1 class="logo">
-            <img class="logo__img" src="assets/logo_mrcoffee.png">
+            <img class="logo__img" src="assets/logo_mrcoffee.png" alt="big cafe's logo">
         </h1>
 
         <div class="invitation">
-            <img class="invitation__img" src="assets/mr_coffee_salle.jpg" alt="intérieur de la salle du café">
+            <img class="invitation__img" src="assets/mr_coffee_salle.jpg" alt="guests inside the cafe room">
         </div>
         
         <div class="container">
 
-            <h2 class="presentation__header">Chez Mr.Coffee,<br>nous aimons trois choses</h2>
-            <div class="presentation">
+            <article class="presentation">
+                <h2 class="presentation__header">Chez Mr.Coffee,<br>nous aimons trois choses</h2>
                 <ul class="presentation__list">
                     <li class="presentation__listItem">
-                        <img class="presentation__img" src="assets/icon_café.png">
+                        <img class="presentation__img" src="assets/icon_café.png" alt="">
                         <h3 class="presentation__subheader">Le bon café</h3>
                         <p class="presentation__paragraph">Nos priorités&nbsp;: la qualité et le goût. Tous nos cafés sont soigneusements séléctionnés en accord avec nos valeurs de respect de la nature et des hommes.</p>
                     </li>
                     <li class="presentation__listItem">
-                        <img class="presentation__img" src="assets/icon_gens.png">
+                        <img class="presentation__img" src="assets/icon_gens.png" alt="">
                         <h3 class="presentation__subheader">Les gens</h3>
                         <p class="presentation__paragraph">Nous sommes de ceux qui pensent qu’ensemble, nous allons plus loin. C’est pourquoi chez Mr.Coffee, notre mission est de rassembler les gens en leur offrant un lieu de liberté et de partages.</p>
                     </li>
                     <li class="presentation__listItem">
-                        <img class="presentation__img" src="assets/icon_histoires.png">
+                        <img class="presentation__img" src="assets/icon_histoires.png" alt="">
                         <h3 class="presentation__subheader">Les histoires</h3>
                         <p class="presentation__paragraph">Chez Mr.Coffee, que vous soyez poête, fantasque ou philosophe, nous vous offrons un lieu pour parler de vos histoires, ou pour les écrire.</p>
                     </li>
-                </ul>
+                </ul>                
                 <button class="presentation__moreButton"><a href="about.html" class="link">En savoir plus</a></button>
-            </div>
+            </article>            
             
-            <h2 class="events__header">Découvrez notre progamme</h2>
-            <div class="events">            
+            <article class="events">   
+                <h2 class="events__header">Découvrez notre progamme</h2>         
                 <div class="events__titleBox">
-                    <img class="events__img" src="assets/icon_open.png">
+                    <img class="events__img" src="assets/icon_open.png" alt="a plate with the word OPEN">
                     <h3 class="events__title">Votre café vous accueille 7j/7&nbsp;:</h3>
                 </div>
                 <ul class="events__list">
@@ -100,9 +100,9 @@
                 <p class="events__additional">
                     Sans oublier nos ateliers d’écritures et évènements excéptionnels&nbsp;!                
                 </p>
-                <p class="events__callToContact">Rendez-vous sur notre page <a href="contact.html" class="link link--onLightBackground">Contact</a> pour retrouver
-                        toutes les infos pratiques</p>
-                </div>
+                <h3 class="events__callToContact">Rendez-vous sur notre page <a href="contact.html" class="link link--onLightBackground">Contact</a> pour retrouver
+                        toutes les infos pratiques</h3>
+            </article>
 
         </div>
 
@@ -112,7 +112,7 @@
         <div class="footer__inner">
             <div class="footer__logo">
                 <a href="index.html" class="footer__link">
-                    <img class="footer__logo--img" src="assets/logo_blanc.png">
+                    <img class="footer__logo--img" src="assets/logo_blanc.png" alt="cafe's logo">
                 </a>
             </div>
             <div class="footer__socialMedia">
@@ -122,17 +122,17 @@
                 <ul class="footer__socialMediaList">
                     <li class="footer__socialMediaList--item">
                         <a href="https://www.linkedin.com/" class="link">
-                            <img class="footer__socialMedia--img" src="assets/logo_linkedin.png">
+                            <img class="footer__socialMedia--img" src="assets/logo_linkedin.png" alt="">
                         </a>
                     </li>
                     <li class="footer__socialMediaList--item">
                         <a href="https://twitter.com/" class="link">
-                            <img class="footer__socialMedia--img" src="assets/logo_twitter.png">
+                            <img class="footer__socialMedia--img" src="assets/logo_twitter.png" alt="">
                         </a>
                     </li>
                     <li class="footer__socialMediaList--item">
                         <a href="https://www.facebook.com/" class="link">
-                            <img class="footer__socialMedia--img" src="assets/logo_facebook.png">
+                            <img class="footer__socialMedia--img" src="assets/logo_facebook.png" alt="">
                         </a>
                     </li>
                 </ul>
