add og properties

--- a/about.html
+++ b/about.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your place, your coffee</title>
-    <link rel="icon" href="assets/logo_dark.png">    
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <title>MR.COFFEE Your place, your coffee</title>
+    <meta property="og:title" content="MR.COFFEE Your place, your coffee">
+    <meta property="og:image" content="assets/full_logo_white.png">
+    <link rel="icon" href="assets/logo_dark.png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+        integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="application.css">
 </head>
 
 <body>
 
-    <header class="header">        
+    <header class="header">
         <div class="header__inner">
             <div class="header__logo">
                 <a href="index.html" class="header__link">
@@ -25,12 +30,12 @@
                         <a href="index.html" class="link">
                             Accueil
                         </a>
-                    </li>            
+                    </li>
                     <li class="header__navListItem">
                         <a href="about.html" class="link">
                             Qui sommes-nous?
                         </a>
-                    </li>            
+                    </li>
                     <li class="header__navListItem">
                         <a href="contact.html" class="link">
                             Nous contacter
@@ -47,7 +52,7 @@
             <img class="logo__img" src="assets/logo_mrcoffee.png" alt="big cafe's logo">
         </h1>
 
-        <article class="about">
+        <section class="about">
             <div class="about__description">
                 <h2 class="about__header">
                     Chez Mr.Coffee, notre engagement commence dans le café.</h2>
@@ -61,11 +66,12 @@
                     l’Homme.
                     C’est ce qui rend nos cafés si bons&nbsp;: ils poussent, sont
                     cultivés, cueillis, et séchés dans le respect et l’amour.
-                </p>            
-                <img class="about__img about__img--right" src="assets/trois_cafés.jpg" alt="coffee in three forms: brewed with foam, ground and beans">
+                </p>
+                <img class="about__img about__img--right" src="assets/trois_cafés.jpg"
+                    alt="coffee in three forms: brewed with foam, ground and beans">
             </div>
             <div class="about__description">
-                <img class="about__img" src="assets/mrcoffee_salle2.jpg" alt="view of the bar in the cafe room">            
+                <img class="about__img" src="assets/mrcoffee_salle2.jpg" alt="view of the bar in the cafe room">
                 <h2 class="about__header">
                     Mr.Coffee, un café (presque) comme les autres.</h2>
                 <p class="about__paragraph">
@@ -81,8 +87,8 @@
                     leur passion commune pour l’écriture et les lettres.
                 </p>
             </div>
-        </article>
-        
+        </section>
+
     </main>
 
     <footer class="footer">
@@ -98,18 +104,18 @@
                 </p>
                 <ul class="footer__socialMediaList">
                     <li class="footer__socialMediaList--item">
-                        <a href="https://www.linkedin.com/" class="link">
-                            <img class="footer__socialMedia--img" src="assets/logo_linkedin.png" alt="">
+                        <a href="https://www.linkedin.com/" target="_blank" class="link">
+                            <img class="footer__socialMedia--img" src="assets/logo_linkedin.png" alt="linkedin icon">
                         </a>
                     </li>
                     <li class="footer__socialMediaList--item">
-                        <a href="https://twitter.com/" class="link">
-                            <img class="footer__socialMedia--img" src="assets/logo_twitter.png" alt="">
+                        <a href="https://twitter.com/" target="_blank" class="link">
+                            <img class="footer__socialMedia--img" src="assets/logo_twitter.png" alt="twitter icon">
                         </a>
                     </li>
                     <li class="footer__socialMediaList--item">
-                        <a href="https://www.facebook.com/" class="link">
-                            <img class="footer__socialMedia--img" src="assets/logo_facebook.png" alt="">
+                        <a href="https://www.facebook.com/" target="_blank" class="link">
+                            <img class="footer__socialMedia--img" src="assets/logo_facebook.png" alt="facebook icon">
                         </a>
                     </li>
                 </ul>
