--- a/contact.html
+++ b/contact.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your place, your coffee</title>
-    <link rel="icon" href="assets/logo_dark.png">    
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <title>MR.COFFEE Your place, your coffee</title>
+    <meta property="og:title" content="MR.COFFEE Your place, your coffee">
+    <meta property="og:image" content="assets/full_logo_white.png">
+    <link rel="icon" href="assets/logo_dark.png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+        integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="application.css">
 </head>
 
 <body>
 
-    <header class="header">        
+    <header class="header">
         <div class="header__inner">
             <div class="header__logo">
                 <a href="index.html" class="header__link">
@@ -25,12 +30,12 @@
                         <a href="index.html" class="link">
                             Accueil
                         </a>
-                    </li>            
+                    </li>
                     <li class="header__navListItem">
                         <a href="about.html" class="link">
                             Qui sommes-nous?
                         </a>
-                    </li>            
+                    </li>
                     <li class="header__navListItem">
                         <a href="contact.html" class="link">
                             Nous contacter
@@ -47,25 +52,27 @@
             <img class="logo__img" src="assets/logo_mrcoffee.png" alt="big cafe's logo">
         </h1>
 
-        <article class="contact">
+        <section class="contact">
             <h2 class="contact__header">On vous attend&nbsp;!</h2>
             <h3 class="contact__cafeName">Mr.Coffee</h3>
 
-        <adress class="contact__details">            
-            <div class="contact__address">
-                15 place Jules Guesde<br>
-                75006 Paris
-            </div>
-            <div class="contact__mediated">
-                Tel&nbsp;: <a class="link link--onLightBackground" href="tel:+33946257845">+33 9 46 25 78 45</a><br>
-                Mail&nbsp;: <a class="link link--onLightBackground" href="mailto:contact@mr-coffee.com">contact@mr-coffee.com</a>
-            </div>
-        </adress>
+            <adress class="contact__details">
+                <div class="contact__address">
+                    15 place Jules Guesde<br>
+                    75006 Paris
+                </div>
+                <div class="contact__mediated">
+                    Tel&nbsp;: <a class="link link--onLightBackground" href="tel:+33946257845">+33 9 46 25 78 45</a><br>
+                    Mail&nbsp;: <a class="link link--onLightBackground"
+                        href="mailto:contact@mr-coffee.com">contact@mr-coffee.com</a>
+                </div>
+            </adress>
 
-        <iframe class="contact__map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d552.0729776163778!2d2.3202916051659916!3d48.83691739328176!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e671b5590a00b1%3A0x2711ee015c1c2b2e!2s15%20Rue%20Jules%20Guesde%2C%2075014%20Paris%2C%20Francja!5e0!3m2!1spl!2spl!4v1641408092268!5m2!1spl!2spl">
-        </iframe>
-        </article>
-        
+            <iframe class="contact__map"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d552.0729776163778!2d2.3202916051659916!3d48.83691739328176!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e671b5590a00b1%3A0x2711ee015c1c2b2e!2s15%20Rue%20Jules%20Guesde%2C%2075014%20Paris%2C%20Francja!5e0!3m2!1spl!2spl!4v1641408092268!5m2!1spl!2spl">
+            </iframe>
+        </section>
+
     </main>
 
     <footer class="footer">
@@ -81,18 +88,18 @@
                 </p>
                 <ul class="footer__socialMediaList">
                     <li class="footer__socialMediaList--item">
-                        <a href="https://www.linkedin.com/" class="link">
-                            <img class="footer__socialMedia--img" src="assets/logo_linkedin.png" alt="">
+                        <a href="https://www.linkedin.com/" target="_blank" class="link">
+                            <img class="footer__socialMedia--img" src="assets/logo_linkedin.png" alt="linkedin icon">
                         </a>
                     </li>
                     <li class="footer__socialMediaList--item">
-                        <a href="https://twitter.com/" class="link">
-                            <img class="footer__socialMedia--img" src="assets/logo_twitter.png" alt="">
+                        <a href="https://twitter.com/" target="_blank" class="link">
+                            <img class="footer__socialMedia--img" src="assets/logo_twitter.png" alt="twitter icon">
                         </a>
                     </li>
                     <li class="footer__socialMediaList--item">
-                        <a href="https://www.facebook.com/" class="link">
-                            <img class="footer__socialMedia--img" src="assets/logo_facebook.png" alt="">
+                        <a href="https://www.facebook.com/" target="_blank" class="link">
+                            <img class="footer__socialMedia--img" src="assets/logo_facebook.png" alt="facebook icon">
                         </a>
                     </li>
                 </ul>
