--- a/index.html
+++ b/index.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your place, your coffee</title>
-    <link rel="icon" href="assets/logo_dark.png">    
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <title>MR.COFFEE Your place, your coffee</title>
+    <meta property="og:title" content="MR.COFFEE Your place, your coffee">
+    <meta property="og:image" content="assets/full_logo_white.png">
+    <link rel="icon" href="assets/logo_dark.png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+        integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="application.css">
 </head>
 
 <body>
 
-    <header class="header">        
+    <header class="header">
         <div class="header__inner">
             <div class="header__logo">
                 <a href="index.html" class="header__link">
@@ -25,12 +30,12 @@
                         <a href="index.html" class="link">
                             Accueil
                         </a>
-                    </li>            
+                    </li>
                     <li class="header__navListItem">
                         <a href="about.html" class="link">
                             Qui sommes-nous?
                         </a>
-                    </li>            
+                    </li>
                     <li class="header__navListItem">
                         <a href="contact.html" class="link">
                             Nous contacter
@@ -50,33 +55,38 @@
         <div class="invitation">
             <img class="invitation__img" src="assets/mr_coffee_salle.jpg" alt="guests inside the cafe room">
         </div>
-        
+
         <div class="container">
 
-            <article class="presentation">
+            <section class="presentation">
                 <h2 class="presentation__header">Chez Mr.Coffee,<br>nous aimons trois choses</h2>
                 <ul class="presentation__list">
                     <li class="presentation__listItem">
                         <img class="presentation__img" src="assets/icon_café.png" alt="">
                         <h3 class="presentation__subheader">Le bon café</h3>
-                        <p class="presentation__paragraph">Nos priorités&nbsp;: la qualité et le goût. Tous nos cafés sont soigneusements séléctionnés en accord avec nos valeurs de respect de la nature et des hommes.</p>
+                        <p class="presentation__paragraph">Nos priorités&nbsp;: la qualité et le goût. Tous nos cafés
+                            sont soigneusements séléctionnés en accord avec nos valeurs de respect de la nature et des
+                            hommes.</p>
                     </li>
                     <li class="presentation__listItem">
                         <img class="presentation__img" src="assets/icon_gens.png" alt="">
                         <h3 class="presentation__subheader">Les gens</h3>
-                        <p class="presentation__paragraph">Nous sommes de ceux qui pensent qu’ensemble, nous allons plus loin. C’est pourquoi chez Mr.Coffee, notre mission est de rassembler les gens en leur offrant un lieu de liberté et de partages.</p>
+                        <p class="presentation__paragraph">Nous sommes de ceux qui pensent qu’ensemble, nous allons plus
+                            loin. C’est pourquoi chez Mr.Coffee, notre mission est de rassembler les gens en leur
+                            offrant un lieu de liberté et de partages.</p>
                     </li>
                     <li class="presentation__listItem">
                         <img class="presentation__img" src="assets/icon_histoires.png" alt="">
                         <h3 class="presentation__subheader">Les histoires</h3>
-                        <p class="presentation__paragraph">Chez Mr.Coffee, que vous soyez poête, fantasque ou philosophe, nous vous offrons un lieu pour parler de vos histoires, ou pour les écrire.</p>
+                        <p class="presentation__paragraph">Chez Mr.Coffee, que vous soyez poête, fantasque ou
+                            philosophe, nous vous offrons un lieu pour parler de vos histoires, ou pour les écrire.</p>
                     </li>
-                </ul>                
+                </ul>
                 <button class="presentation__moreButton"><a href="about.html" class="link">En savoir plus</a></button>
-            </article>            
-            
-            <article class="events">   
-                <h2 class="events__header">Découvrez notre progamme</h2>         
+            </section>
+
+            <section class="events">
+                <h2 class="events__header">Découvrez notre progamme</h2>
                 <div class="events__titleBox">
                     <img class="events__img" src="assets/icon_open.png" alt="a plate with the word OPEN">
                     <h3 class="events__title">Votre café vous accueille 7j/7&nbsp;:</h3>
@@ -84,25 +94,31 @@
                 <ul class="events__list">
                     <li class="events__item">
                         <div class="events__subitem events__subitem--title">
-                            Tous les mardis,<br>retrouvez <span class="events--attraction">les cafés poésies&nbsp;:</span>
+                            Tous les mardis,<br>retrouvez <span class="events--attraction">les cafés
+                                poésies&nbsp;:</span>
                         </div>
-                        <div class="events__subitem events__subitem--explication"><span class="events--attraction">Venez écouter ou lire vos plus beaux poèmes&nbsp;: Mr.Coffee offre une consommation à tous les courageux&nbsp;!</span></div>
+                        <div class="events__subitem events__subitem--explication"><span class="events--attraction">Venez
+                                écouter ou lire vos plus beaux poèmes&nbsp;: Mr.Coffee offre une consommation à tous les
+                                courageux&nbsp;!</span></div>
                     </li>
                     <li class="events__item">
                         <div class="events__subitem events__subitem--title">
-                            Tous les jeudis,<br>retrouvez <span class="events--attraction">les cafés philo et débat&nbsp;:</span>
+                            Tous les jeudis,<br>retrouvez <span class="events--attraction">les cafés philo et
+                                débat&nbsp;:</span>
                         </div>
                         <div class="events__subitem events__subitem--explication">
-                            <span class="events--attraction">Autour d’un thème philosophique ou de société, venez débattre entre experts ou simple curieux.</span>
+                            <span class="events--attraction">Autour d’un thème philosophique ou de société, venez
+                                débattre entre experts ou simple curieux.</span>
                         </div>
                     </li>
                 </ul>
                 <p class="events__additional">
-                    Sans oublier nos ateliers d’écritures et évènements excéptionnels&nbsp;!                
+                    Sans oublier nos ateliers d’écritures et évènements excéptionnels&nbsp;!
                 </p>
-                <h3 class="events__callToContact">Rendez-vous sur notre page <a href="contact.html" class="link link--onLightBackground">Contact</a> pour retrouver
-                        toutes les infos pratiques</h3>
-            </article>
+                <h3 class="events__callToContact">Rendez-vous sur notre page <a href="contact.html"
+                        class="link link--onLightBackground">Contact</a> pour retrouver
+                    toutes les infos pratiques</h3>
+            </section>
 
         </div>
 
@@ -121,18 +137,18 @@
                 </p>
                 <ul class="footer__socialMediaList">
                     <li class="footer__socialMediaList--item">
-                        <a href="https://www.linkedin.com/" class="link">
-                            <img class="footer__socialMedia--img" src="assets/logo_linkedin.png" alt="">
+                        <a href="https://www.linkedin.com/" target="_blank" class="link">
+                            <img class="footer__socialMedia--img" src="assets/logo_linkedin.png" alt="linkedin icon">
                         </a>
                     </li>
                     <li class="footer__socialMediaList--item">
-                        <a href="https://twitter.com/" class="link">
-                            <img class="footer__socialMedia--img" src="assets/logo_twitter.png" alt="">
+                        <a href="https://twitter.com/" target="_blank" class="link">
+                            <img class="footer__socialMedia--img" src="assets/logo_twitter.png" alt="twitter icon">
                         </a>
                     </li>
                     <li class="footer__socialMediaList--item">
-                        <a href="https://www.facebook.com/" class="link">
-                            <img class="footer__socialMedia--img" src="assets/logo_facebook.png" alt="">
+                        <a href="https://www.facebook.com/" target="_blank" class="link">
+                            <img class="footer__socialMedia--img" src="assets/logo_facebook.png" alt="facebook icon">
                         </a>
                     </li>
                 </ul>
