--- a/about.html
+++ b/about.html
@@ -53,39 +53,50 @@
         </h1>
 
         <section class="about">
-            <div class="about__description">
-                <h2 class="about__header">
-                    Chez Mr.Coffee, notre engagement commence dans le café.</h2>
-                <p class="about__paragraph">
-                    On ne pouvait pas offrir un espace de liberté d’expression
-                    et de partage sans penser à ce que l’on sert dans nos
-                    tasses..
-                    Tout nos cafés viennent d’exploitations équitables&nbsp;: les
-                    agriculteurs bénéficient d’une rémunération juste pour leur
-                    labeur, les conditions de travail respectent les droits de
-                    l’Homme.
-                    C’est ce qui rend nos cafés si bons&nbsp;: ils poussent, sont
-                    cultivés, cueillis, et séchés dans le respect et l’amour.
-                </p>
+            <div class="about__contentBox">
+                <div class="about__description">
+                    <h2 class="about__header">
+                        Chez Mr.Coffee, notre engagement commence dans le café.</h2>
+                    <p class="about__paragraph">
+                        On ne pouvait pas offrir un espace de liberté d’expression
+                        et de partage sans penser à ce que l’on sert dans nos
+                        tasses..
+                    </p>
+                    <p class="about__paragraph">
+                        Tout nos cafés viennent d’exploitations équitables&nbsp;: les
+                        agriculteurs bénéficient d’une rémunération juste pour leur
+                        labeur, les conditions de travail respectent les droits de
+                        l’Homme.</p>
+                    <p class="about__paragraph">
+                        C’est ce qui rend nos cafés si bons&nbsp;: ils poussent, sont
+                        cultivés, cueillis, et séchés dans le respect et l’amour.
+                    </p>
+                </div>
                 <img class="about__img about__img--right" src="assets/trois_cafés.jpg"
                     alt="coffee in three forms: brewed with foam, ground and beans">
             </div>
-            <div class="about__description">
-                <img class="about__img" src="assets/mrcoffee_salle2.jpg" alt="view of the bar in the cafe room">
-                <h2 class="about__header">
-                    Mr.Coffee, un café (presque) comme les autres.</h2>
-                <p class="about__paragraph">
-                    Ici, on vient pour retrouver quelqu’un, ou se retrouver avec
-                    soi, pour travailler sur son ordinateur ou se détendre, pour
-                    lire parmis les ouvrages de notre bibliothèque ou
-                    simplement apprécier un bon café.
-                    Tout ce monde si différent qui se croise sans se voir, ça nous
-                    a donné envie de faire quelque chose en plus.
-                    C’est comme cela que Mr.Coffee, le philosophe, est né.
-                    Notre ambition&nbsp;: réunir des gens de tous les horizons
-                    autour de sujets de société, de débats philosophiques, de
-                    leur passion commune pour l’écriture et les lettres.
-                </p>
+            <div class="about__contentBox">
+                <img class="about__img about__img--left" src="assets/mrcoffee_salle2.jpg"
+                    alt="view of the bar in the cafe room">
+                <div class="about__description">
+                    <h2 class="about__header">
+                        Mr.Coffee, un café (presque) comme les autres.</h2>
+                    <p class="about__paragraph">
+                        Ici, on vient pour retrouver quelqu’un, ou se retrouver avec
+                        soi, pour travailler sur son ordinateur ou se détendre, pour
+                        lire parmis les ouvrages de notre bibliothèque ou
+                        simplement apprécier un bon café.</p>
+                    <p class="about__paragraph">
+                        Tout ce monde si différent qui se croise sans se voir, ça nous
+                        a donné envie de faire quelque chose en plus.</p>
+                    <p class="about__paragraph">
+                        C’est comme cela que Mr.Coffee, le philosophe, est né.</p>
+                    <p class="about__paragraph">
+                        Notre ambition&nbsp;: réunir des gens de tous les horizons
+                        autour de sujets de société, de débats philosophiques, de
+                        leur passion commune pour l’écriture et les lettres.
+                    </p>
+                </div>
             </div>
         </section>
 
