--- a/contact.html
+++ b/contact.html
@@ -63,8 +63,8 @@
                 </div>
                 <div class="contact__mediated">
                     Tel&nbsp;: <a class="link link--onLightBackground" href="tel:+33946257845">+33 9 46 25 78 45</a><br>
-                    Mail&nbsp;: <a class="link link--onLightBackground"
-                        href="mailto:contact@mr-coffee.com">contact@mr-coffee.com</a>
+                    Mail&nbsp;: <a class="link link--onLightBackground" href="mailto:contact@mr-coffee.com">
+                        contact@mr-coffee.com</a>
                 </div>
             </adress>
 
