fix typo in file names in  french language

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <h2 class="presentation__header">Chez Mr.Coffee,<br>nous aimons trois choses</h2>
             <ul class="presentation__list">
                 <li class="presentation__listItem">
-                    <img class="presentation__img" src="assets/icon_café.png" alt="">
+                    <img class="presentation__img" src="assets/icon_cafe.png" alt="">
                     <h3 class="presentation__subheader">Le bon café</h3>
                     <p class="presentation__paragraph">Nos priorités&nbsp;: la qualité et le goût. Tous nos cafés
                         sont soigneusements séléctionnés en accord avec nos valeurs de respect de la nature et des
