--- a/about.html
+++ b/about.html
@@ -72,7 +72,7 @@
                         cultivés, cueillis, et séchés dans le respect et l’amour.
                     </p>
                 </div>
-                <img class="about__img about__img--right" src="assets/trois_cafés.jpg"
+                <img class="about__img about__img--right" src="assets/trois_cafes.jpg"
                     alt="coffee in three forms: brewed with foam, ground and beans">
             </div>
             <div class="about__contentBox">
