generalize styles for button

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                         philosophe, nous vous offrons un lieu pour parler de vos histoires, ou pour les écrire.</p>
                 </li>
             </ul>
-            <button class="presentation__moreButton"><a href="about.html" class="link">En savoir plus</a></button>
+            <button class="button"><a href="about.html" class="link">En savoir plus</a></button>
         </section>
 
         <section class="events">
